dc-api/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dc-system
  labels:
    app.kubernetes.io/managed-by: dc-api
